# egon-journal

./: .env.example  .gitignore  README.md  egon.toml  pyproject.toml
.github/workflows/: lint.yml  tests.yml
egon/: cli.py  config.py  full_report.py  linker.py  plot_style.py  renderer.py  schema.py
egon/analytics/: correlation_plot.py  loader.py  pronoun_ratio_plot.py  topic_plot.py  word_count.py  wordcloud_plot.py
egon/health/: README.md  apple_health.py  exercise_plot.py  hrv_plot.py  resting_heart_rate_plot.py  sleep.py  sleep_plot.py  step_count_plot.py  vo2max_plot.py  weight_plot.py
egon/limbic/: bigfive.py  bigfive_plot.py  cognitive_bias.py  cognitive_bias_plot.py  emotion.py  emotion_plot.py  mbti.py  mbti_plot.py  sentiment.py  sentiment_plot.py
egon/node_types/: journal_entry.py  program.py  prompt.py  summary.py
reports/: README.md
scripts/: setup_bigfive.sh  setup_limbic.sh
tests/: test_analytics.py  test_bigfive.py  test_cli.py  test_config.py  test_correlation_plot.py  test_health.py  test_limbic.py  test_linker.py  test_mbti.py  test_node_types.py  test_pronoun_ratio.py  test_schema.py  test_sleep.py  test_topic_plot.py  test_wordcloud.py
