[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egon-journal"
version = "0.1.0"
description = "Structured journaling support for the Egon graph"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.scripts]
egon = "egon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["egon"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
