[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "egon-journal"
version = "0.1.0"
description = "Structured journaling support for the Egon graph"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.9",
    "vaderSentiment>=3.3",
    "wordcloud>=1.9",
    "scipy>=1.13",
    "numpy>=1.26",
]

[project.scripts]
egon = "egon.cli:app"

[project.optional-dependencies]
limbic = [
    "transformers>=4.40",
    "torch>=2.0",
    "sentencepiece",
    "protobuf",
]
topics = [
    "bertopic>=0.16",
    "sentence-transformers>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["egon"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
addopts = "--cov=egon --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["egon"]
omit = ["tests/*", ".venv/*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
